--- a/templates/register.html
+++ b/templates/register.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Register</title>
+    <link rel="shortcut icon" href="https://oqahbngsiykszugcszto.supabase.co/storage/v1/object/public/logo/favicon.ico.ico" type="image/x-icon">
     <style>
       * {
         margin: 0;
