Added create post functionality

--- a/templates/create_post.html
+++ b/templates/create_post.html
@@ -178,7 +178,7 @@
           <p>What's on your mind?</p>
         </div>
         <div class="content">
-          <form id="createPostForm">
+          <form id="createPostForm" method="post">
             <div class="form-group">
             <div class="form-group">
               <label for="postContent">Any Confessions ?</label>
@@ -187,7 +187,7 @@
                 placeholder="Write something interesting..."
                 required
                 maxlength="1000"
-                name="post"
+                name="post_content"
               ></textarea>
               <div class="char-count">
                 <span id="contentCount">0</span>/1000
