Added requiremnts.txt and Done Documentation

--- a/templates/login_fail.html
+++ b/templates/login_fail.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login Failed</title>
     <link
-      rel="icon"
-      href="https://firebasestorage.googleapis.com/v0/b/food-donation-bc43b.firebasestorage.app/o/favicon.ico?alt=media&token=56a306dc-3749-4d56-962b-dcfbb59cce10"
+      rel="shortcut icon"
+      href="https://oqahbngsiykszugcszto.supabase.co/storage/v1/object/public/logo/favicon.ico.ico"
       type="image/x-icon"
     />
     <style>
