--- a/templates/register.html
+++ b/templates/register.html
@@ -129,7 +129,7 @@
               <input
                 type="text"
                 id="registerName"
-                placeholder="Entany name (eg : xyzWhoitis)"
+                placeholder="Enter name (eg : xyzWhoitis)"
                 required
                 name="name"
               />
